<resources>
    <string name="app_name">Missing People</string>
    <string name="title_activity_main">รวมประกาศ</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">สมัครสมาชิก</string>
    <string name="title_activity_login">ลงชื่อเข้าใช้งาน</string>
    <string name="title_activity_user_management">จัดการผู้ใช้งาน</string>
    <string name="title_activity_user_detail_edit">แก้ไขข้อมูลส่วนตัว</string>
    <string name="title_activity_user_password_change">เปลี่ยนรหัสผ่าน</string>
    <string name="title_activity_maps">แผนที่</string>
    <string name="title_activity_add_notice">สร้างประกาศคนหาย</string>
    <string name="title_activity_seen_info_add">แจ้งข้อมูลเบาะแส</string>
    <string name="title_activity_back_office">หลังบ้าน</string>
    <string name="title_activity_notice_detail">รายละเอียดประกาศคนหาย</string>
    <string name="title_activity_notice_detail_edit">แก้ไขประกาศ</string>
    <string name="title_activity_seen_info_detail">รายละเอียดข้อมูลเบาะแส</string>
    <string name="title_activity_user_noticelist">รายการประกาศที่สร้าง</string>
    <string name="title_activity_user_seenlist">รายการข้อมูลเบาะแสที่แจ้ง</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="username">ชื่อผู้ใช้งาน</string>
    <string name="password">รหัสผ่าน</string>
    <string name="replyPassword">ยืนยันรหัสผ่าน</string>
    <string name="recentPassword">รหัสผ่านปัจจุบัน</string>
    <string name="newPassword">รหัสผ่านใหม่</string>
    <string name="passHint">**********</string>
    <string name="name">ชื่อ-นามสกุล</string>
    <string name="nationID">เลขประจำตัวประชาชน</string>
    <string name="email">อีเมล</string>
    <string name="editPass">แก้ไข</string>
    <string name="telephone">หมายเลขโทรศัพท์</string>
    <string name="registerSave">ลงทะเบียน</string>
    <string name="editDetail">แก้ไขข้อมูล</string>
    <string name="allNotice">ดูประกาศ</string>
    <string name="allSeen">ดูเบอะแส</string>
    <string name="logOut">ออกจากระบบ</string>
    <string name="login">ลงชื่อเข้าใช้งาน</string>
    <string name="register">ยังไม่เป็นสมาชิก สมัครที่นี่</string>
    <string name="fabNotice">สร้างประกาศคนหาย</string>
    <string name="fabSeenInfo">แจ้งเบาะแสการพบเห็น</string>
    <string name="fabUserDetail">จัดการผู้ใช้งาน</string>
    <string name="lostName">ชื่อผู้สูญหาย</string>
    <string name="lostBirthDate">วันเกิดผู้สูญหาย</string>
    <string name="lostPlace">สถานที่หายตัว</string>
    <string name="lostDate">วันที่หายตัวไป</string>
    <string name="detail">ข้อมูลเพิ่มเติม</string>
    <string name="detail_hint">ข้อมูลอื่น ๆ เพื่อช่วยในการติดตาม เช่น ลักษณะเฉพาะตัว</string>
    <string name="notice_adder">ผู้สร้างประกาศ</string>
    <string name="notice_contact">หมายเลขโทรศัพท์ติดต่อ</string>
    <string name="create_notice">สร้างประกาศ</string>
    <string name="notice_edit">แก้ไขประกาศ</string>
    <string name="update">บันทึกข้อมูล</string>
    <string name="seenPlace">สถานที่พบเห็น</string>
    <string name="seenDate">วันที่พบเห็น</string>
    <string name="seen_adder">ผู้ลงข้อมูล</string>
    <string name="seen_add">แจ้งเบาะแส</string>
    <string name="processing">กำลังดำเนินการ</string>
    <string name="sex">เพศ</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="lnSex">เพศ</string>
    <string name="errorNotConnectInternet">กรุณาเชื่อมต่ออินเตอร์เน็ตเพื่อใช้งานระบบ</string>
    <string name="errorCannotConnectToServer">ไม่สามารถเชื่อมต่อกับระบบได้ กรุณาลองใหม่ในภายหลัง</string>
    <string name="errorUsernameExisted">ชื่อผู้ใช้ถูกใช้งานแล้ว</string>
    <string name="errorSystemWorkingIncorrectly">ระบบทำงานไม่ถูกต้อง กรุณาลองใหม่อีกครั้งภายหลัง</string>
    <string name="errorNoNoticeExist">ไม่พบประกาศคนหายในระบบ</string>
    <string name="errorNoClueExist">ไม่พบข้อมูลเบาะแสในระบบ</string>
    <string name="errorUserOrPassIncorrect">ข้อมูลชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="nav_user_logout">ลงชื่อออกจากระบบ</string>
    <string name="nav_user_login">ลงชื่อเข้าใช้งานระบบ</string>
    <string name="nav_user_clue">เบาะแสที่แจ้งไว้ทั้งหมด</string>
    <string name="nav_user_notice">ประกาศคนหายที่สร้างทั้งหมด</string>
    <string name="nav_user_detail">รายละเอียดผู้ใช้งาน</string>
    <string name="nav_title">ส่วนจัดการผู้ใช้งาน</string>
    <string name="nav_exit">ออกจากแอพพลิเคชัน</string>
    <string name="action_search">ค้นหา</string>
    <string name="age_range">ช่วงอายุ</string>
    <string name="notice_list_title">รายการประกาศคนหาย</string>
    <string name="sexBoth">ไม่ระบุ</string>
    <string name="caption">* ในกรณีไม่กำหนดช่วงอายุให้กำหนดเป็น 0 - 0</string>
    <string name="custom_search_Bar">ผลการค้นหา</string>
    <string name="noNoticeSameWithSearch">ไม่พบประกาศที่ตรงกับตัวเลือกในการค้นหา</string>
    <string name="errorNoticeOverThree">ผู้ใช้ได้สร้างประกาศที่ใช้งานอยู่ครบ 3 ประกาศแล้ว</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_maps2">ตำแหน่งสถานที่</string>
    <string name="save">บันทึกข้อมูล</string>
    <string name="errorNoClueForNotice">ไม่พบเบาะแสที่เกี่ยวข้องในระบบ</string>
</resources>
